[package]
name = "marble_try"
version = "0.1.0"
authors = ["Akira Kano <a.kano1101@gmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-trait = "0.1.58"
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
image = "0.24.3"
log = "0.4.16"
env_logger = "0.9.0"
simplelog = "0.11.2"
fern = "0.6.0"
wasm-bindgen-futures = "0.4.1"
serde_json = "1.0.41"
anyhow = "1.0.66"
reqwest = { version = "0.11.12", default-features = false, features = ["json"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1.21.2", features = ["full"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
tokio = { version = "1.21.2", default-features = false, features = ["rt", "io-util", "time", "macros", "sync", "test-util"] }


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
